# VPN4Friends

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose-new.yml  docker-compose.yml  migration_report.txt  pyproject.toml  requirements.txt  start.sh  supervisord.conf
.github/workflows/: ci.yml  deploy.yml  lint.yml
.kiro/steering/: commit-workflow.md
alembic/: env.py
alembic/versions/: 08940f47ba4f_add_connectionpreset_model_and_extend_.py  e3c2b9a1e4f5_add_label_and_settings_to_vpn_profiles.py
backup/: 3x-ui-config.json  3x-ui-setup.md  docker-compose.yml  setup-3xui.sh  sysctl.conf  x-ui-full.db.b64  x-ui.db.b64
docs/: NEW_SERVER_SETUP.md  SERVER_SETUP.md
miniapp/: index.html  package.json
miniapp/src/: App.jsx  api.js  styles.css  telegram.js
scripts/: auto-setup-3xui.sh  check_db.py  check_xui.py  cleanup-old-xui.sh  configure-reality.sh  install-3xui.sh  install-new-server.sh  setup-3xui-reality.sh  setup-server.sh  test_vpn_speed.py
src/: __init__.py
src/api/: dependencies.py  main.py  schemas.py
tests/: test_admin_handlers.py  test_qr_generator.py  test_shadowsocks_url.py  test_vless_url.py
tools/: EXECUTION_PLAN.md  REALITY_KEYS_SOLUTION.md  config.json  dns_test.py  err.txt  find_correct_private_key.py  fix_reality.py  fix_reality_keys.py  generate_reality_keys.py  reality_problem_analysis.md  restore_reality_keys.py  speed_test.py  update_reality.py  update_reality_keys.py  verify_reality_keys.py  vpn_check.py  vpn_routing_test.py  vpn_test.py
(+32 files in other folders)
